testsuite/tests/parse-errors/unclosed_paren_module_type.compilers.reference
File "unclosed_paren_module_type.mli", line 9, characters 0-0:
Error: Syntax error: ')' expected
File "unclosed_paren_module_type.mli", line 8, characters 11-12:
Error: This '(' might be unmatched
